# bolt4

./: .gitignore  Cargo.toml  README.md  flake.nix  output.txt
src/: lib.rs  main.rs
test/: input.json
