[package]
name = "onionb"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.27", features = ["derive"] }
color-eyre = "0.6.3"
hex = { version = "0.4.3", features = ["serde"] }
hmac = "0.12.1"
rust-crypto = "0.2.36"
secp256k1 = { version = "0.30.0", features = ["hashes"] }
serde_json = "1.0.137"
